# fantasy-pl-mcp

./: API-DOCUMENTATION.md  deploy-stdio-update.sh  deploy.sh  fix-api.sh  fix-firewall.sh  fix-service.sh  http-service.sh  http-update.sh  mcp-stdio-service.sh  n8n-config.md  n8n-correct-setup.md  n8n-setup.sh  n8n-simple-setup.md  pyproject.toml  quick-update.sh  server-update-commands.txt  simple-deploy.sh  tcp-service.sh  tcp-update.sh  update-server.sh
src/fpl_mcp/: direct_api.py  http_mcp_server.py  n8n_bridge.py  simple_api.py  sse_transport.py  stdio_server.py  tcp_bridge.py
